# mini-project

./: README.md  pyproject.toml
fun/: main.py  utils.py
fun.egg-info/: SOURCES.txt  entry_points.txt
