[build-system]
requires = ["setuptools>=61.0"] 
build-backend = "setuptools.build_meta"

[project]
name = "fun"  # 你的项目名称（自定义，如 "my_local_tool"）
version = "0.1.0"           # 版本号（自定义，遵循语义化版本，如 0.1.0、1.0.0）
authors = [                 # 作者信息（可选，但建议填写，方便识别）
  { name="Li Ding", email="li.ding@zhichun.org" }  # 邮箱可选，可删
]
requires-python = ">=3.8"   # 项目支持的 Python 版本（根据你的代码兼容性填，如 >=3.6）
description = "Have some fun~ "  # 项目描述（可选）


[project.scripts]
# 格式：命令名 = "模块.函数或类"
# 例如：当用户执行 `fun_cmd` 命令时，会调用 fun模块下main.py中的main函数
have_fun = "fun.main:main"
