[build-system]
requires = ["setuptools>=61.0"] 
build-backend = "setuptools.build_meta"

[project]
name = "fun"  
version = "1.1.1"          
authors = [                 
  { name="Li Ding", email="li.ding@zhichun.org" }  
]
requires-python = ">=3.8"   
description = "Have some fun~ "  

[project.scripts]
have_fun = "fun.main:run"
